[package]
name = "ink"
version = "0.0.0"
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
description = "Simple and lightweight markup language"
license = "MIT"
readme = "README.md"

[dependencies]

[badges]
travis-ci = { repository = "bash/ink", branch = "master" }
codecov = { repository = "bash/ink", branch = "master", service = "github" }
maintenance = { status = "experimental" }